[package]
name = "mp4"
version = "0.15.0"
authors = [
    "Alf <alf.g.jr@gmail.com>",
    "Gerwin van der Lugt <account+github@gerwin3.com>",
]
edition = "2024"
description = "MP4 reader and writer library in Rust."
documentation = "https://docs.rs/mp4"
readme = "README.md"
homepage = "https://github.com/gerwin3/mp4-rust"
repository = "https://github.com/gerwin3/mp4-rust"
keywords = ["mp4", "iso-mp4", "isobmff", "video", "multimedia"]
license = "MIT"
include = ["src", "benches", "Cargo.toml", "README", "LICENSE"]

[dependencies]
byteorder = "1"

[dev-dependencies]
criterion = "0.6"

[[bench]]
name = "bench_main"
harness = false
